--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@onsetsoftware/automerge-patcher",
-  "private": true,
-  "version": "0.3.1",
+  "private": false,
+  "version": "0.1.1",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -20,7 +20,7 @@
     "vitest": "^0.18.1"
   },
   "peerDependencies": {
-    "@automerge/automerge": "^2.0.1-alpha.2"
+    "@automerge/automerge": "2.0.1-alpha.3"
   },
   "files": [
     "dist"
