--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@onsetsoftware/automerge-patcher",
   "private": false,
-  "version": "0.1.1",
+  "version": "0.2.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -35,7 +35,7 @@
   },
   "types": "./dist/types/index.d.ts",
   "dependencies": {
-    "dot-object": "^2.1.4",
+    "dot-prop": "^7.2.0",
     "is-plain-object": "^5.0.0"
   }
 }
