--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "vitest": "^0.18.1"
   },
   "peerDependencies": {
-    "@automerge/automerge": "2.0.1-alpha.5"
+    "@automerge/automerge": "2.0.1"
   },
   "files": [
     "dist"
