--- a/package.json
+++ b/package.json
@@ -13,17 +13,16 @@
     "vitest.commandLine": "npm vitest run"
   },
   "devDependencies": {
-    "@types/dot-object": "^2.1.2",
-    "typescript": "^4.6.4",
+    "typescript": "^5.0.0",
     "vite": "^4.0.0",
     "vite-plugin-dts": "^2.1.0",
-    "vite-plugin-externalize-deps": "^0.5.0",
+    "vite-plugin-externalize-deps": "^0.6.0",
     "vite-plugin-top-level-await": "^1.3.0",
     "vite-plugin-wasm": "^3.2.2",
-    "vitest": "^0.30.0"
+    "vitest": "^0.32.0"
   },
   "peerDependencies": {
-    "@automerge/automerge": "^2.0.3"
+    "@automerge/automerge": "2.1.0-alpha.3"
   },
   "files": [
     "dist"
