--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "vitest": "^0.32.0"
   },
   "peerDependencies": {
-    "@automerge/automerge": "2.1.0-alpha.3"
+    "@automerge/automerge": "next"
   },
   "files": [
     "dist"
@@ -38,7 +38,7 @@
   },
   "types": "./dist/types/index.d.ts",
   "dependencies": {
-    "dot-path-value": "^0.0.9",
+    "dot-path-value": "^0.0.10",
     "is-plain-object": "^5.0.0"
   }
 }
