--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -69,7 +69,7 @@ jobs:
         with:
           name: Automerge Patcher v${{ needs.check_if_version_upgraded.outputs.version }}
           tag_name: v${{ needs.check_if_version_upgraded.outputs.version }}
-          target_commitish: main
+          target_commitish: ${{ github.ref_name }}
           generate_release_notes: true
           draft: false
         env:
