--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "test": "vitest --watch",
+    "bench": "vitest bench",
     "vitest.commandLine": "npm vitest run"
   },
   "devDependencies": {
@@ -19,7 +20,7 @@
     "vite-plugin-externalize-deps": "^0.6.0",
     "vite-plugin-top-level-await": "^1.3.0",
     "vite-plugin-wasm": "^3.2.2",
-    "vitest": "^0.32.0"
+    "vitest": "0.31.1"
   },
   "peerDependencies": {
     "@automerge/automerge": "next"
