--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
   "devDependencies": {
     "typescript": "^5.0.0",
     "vite": "^4.0.0",
-    "vite-plugin-dts": "^2.1.0",
-    "vite-plugin-externalize-deps": "^0.6.0",
+    "vite-plugin-dts": "^3.0.0",
+    "vite-plugin-externalize-deps": "^0.7.0",
     "vite-plugin-top-level-await": "^1.3.0",
     "vite-plugin-wasm": "^3.2.2",
     "vitest": "0.31.1"
@@ -28,12 +28,12 @@
   "files": [
     "dist"
   ],
-  "main": "./dist/automerge-patcher.umd.js",
-  "module": "./dist/automerge-patcher.es.js",
+  "main": "./dist/automerge-patcher.umd.cjs",
+  "module": "./dist/automerge-patcher.js",
   "exports": {
     ".": {
-      "import": "./dist/automerge-patcher.es.js",
-      "require": "./dist/automerge-patcher.umd.js",
+      "import": "./dist/automerge-patcher.js",
+      "require": "./dist/automerge-patcher.umd.cjs",
       "types": "./dist/types/index.d.ts"
     }
   },
