--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "vite-plugin-externalize-deps": "^0.8.0",
     "vite-plugin-top-level-await": "^1.3.0",
     "vite-plugin-wasm": "^3.2.2",
-    "vitest": "1.0.0"
+    "vitest": "^1.0.0"
   },
   "peerDependencies": {
     "@automerge/automerge": "^2.1.0"
